menambahkan link tugas

--- a/inti/index.html
+++ b/inti/index.html
@@ -136,7 +136,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Ujian Tengah Semester</h2>
-          <h3 style="color:blue" >Praktikum SIG Berbasis Web</h3>
+          <h3 style="color:blue"">Praktikum SIG Berbasis Web</h3>
           
           <table align="center">
             <tr>
@@ -387,7 +387,7 @@
 
     <!-- Services Section -->
      <section id="listtugas" class="tugas">
-      <h2>Praktikum SIG-WEB A 2025</h2>
+      <h2 align="left">Praktikum SIG-WEB A 2025</h2>
         <table>
             <tr>
                 <th>No</th>
